--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
@@ -8,21 +8,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Rajdhani:wght@500;600;700&display=swap" rel="stylesheet" />
-    <meta name="description" content="Plongez dans l'univers cyberpunk de BattleCorp. Stratégie, combat et corporations dans un monde futuriste." />
-    <title>BattleCorp - Jeu de Stratégie Cyberpunk</title>
+
+    <meta name="description" content="Lead your military corporation, manage resources, and conquer planets in BattleCorp." />
+    <title>BattleCorp - Cyberpunk Strategy Game</title>
+
     <!-- Open Graph -->
-    <meta property="og:title" content="BattleCorp - Jeu de Stratégie Cyberpunk" />
-    <meta property="og:description" content="Plongez dans l'univers cyberpunk de BattleCorp. Stratégie, combat et corporations dans un monde futuriste." />
+    <meta property="og:title" content="BattleCorp - Cyberpunk Strategy Game" />
+    <meta property="og:description" content="Lead your military corporation, manage resources, and conquer planets in BattleCorp." />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="BattleCorp" />
-    <meta property="og:image" content="https://id-preview--18946607-4aa7-4632-8a1e-78a1aa722341.lovable.app/og-image.jpg" />
+    <meta property="og:url" content="https://battlecorpdev.github.io/site-fred-battlecorp-v1/" />
+    <meta property="og:image" content="https://battlecorpdev.github.io/site-fred-battlecorp-v1/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="640" />
+    <meta property="og:locale" content="fr_FR" />
+    <meta property="og:locale:alternate" content="en_US" />
+
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://id-preview--18946607-4aa7-4632-8a1e-78a1aa722341.lovable.app/og-image.jpg" />
-    <!-- Preload hero image for LCP optimization -->
-    <link rel="preload" as="image" href="/src/assets/herodesktop_bg.webp" />
+    <meta name="twitter:title" content="BattleCorp - Cyberpunk Strategy Game" />
+    <meta name="twitter:description" content="Lead your military corporation, manage resources, and conquer planets in BattleCorp." />
+    <meta name="twitter:image" content="https://battlecorpdev.github.io/site-fred-battlecorp-v1/og-image.jpg" />
   </head>
   <body>
     <div id="root"></div>
